Adding a bit of CSS on index

--- a/index.html
+++ b/index.html
@@ -3,6 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <title>Fulanita de tal</title>
+    <style>
+        body {
+            background-color: #F1FCFC;
+        }
+        hr {
+            border-color: whitesmoke;
+            border-style: none;
+            border-top-style: dotted;
+            border-width: 15px;
+            width: 5%;
+
+        }
+    </style>
+
+
+
 </head>
 <body>
     <table cellspacing="20">
